# simple-library

./: CMakeLists.txt  LICENSE
src/: CMakeLists.txt  file_creator.cpp  main.cpp
src/include/: file_creator.hpp
tests/: CMakeLists.txt  file_creator_test.cpp
